refactor:  setId() 메서드 추가 및 wrapper → primitive로 변경